update game and joined link

--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock-Paper-Scissors</title>
-    <link rel="stylesheet" href="./style.css"> 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rock-Paper-Scissors</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <div id="theNew">The New</div>
   <header>ROCK, PAPER, SCISSORS</header>
-  <div id="playTitle"><a href="./playGame.html">PLAY!</a></div>
+  <div id="playTitle"><a id="play" href="./playGame.html">PLAY!</a></div>
+  <p id=""></p>
+  <footer>A project for <a id="odinLink" href="https://www.theodinproject.com" target="_blank"> The Odin Project</a>
+    <a id="githubLink" target="_blank" href="https://github.com/shadmik">Follow me on:<img src="./images/github.png"
+        style="width: 40px;" alt="""></a></footer>
   <script>
   </script>
 </body>
