--- a/playGame.html
+++ b/playGame.html
@@ -13,11 +13,14 @@
     <h2 id="computerNameScore">Computer : 0</h2>
     <div id="compPhoto"></div>
     <p id="showMsg"></p>
+    <p id="retry"></p>
     <div id="selections">
         <img class="images" id="rock" src="./images/rock.jpg" alt="">
         <img class="images" id="paper" src="./images/paper.jpg" alt="">
         <img class="images" id="scissors" src="./images/scissors.jpg" alt="">
     </div>
     <p id="nameScore"></p>
+    <footer>A project for <a id="odinLink" href="https://www.theodinproject.com" target="_blank"> The Odin Project</a>
+        <a id="githubLink" target="_blank"  href="https://github.com/shadmik">Follow me on:<img src="./images/github.png" style="width: 40px;"alt="""></a></footer>
 </body>
 </html>
