Update playGame.html && images

--- a/playGame.html
+++ b/playGame.html
@@ -15,9 +15,9 @@
     <p id="showMsg"></p>
     <p id="retry"></p>
     <div id="selections">
-        <img class="images" id="rock" src="./images/rock.jpg" alt="">
-        <img class="images" id="paper" src="./images/paper.jpg" alt="">
-        <img class="images" id="scissors" src="./images/scissors.jpg" alt="">
+        <img class="images" id="rock" src="./images/rock.png" alt="">
+        <img class="images" id="paper" src="./images/paper.png" alt="">
+        <img class="images" id="scissors" src="./images/scissors.png" alt="">
     </div>
     <p id="nameScore"></p>
     <footer>A project for <a id="odinLink" href="https://www.theodinproject.com" target="_blank"> The Odin Project</a>
